[package]
name = "gosub-engine-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "gosub_engine_core"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "gtk_cairo"
path = "examples/gtk_cairo/main.rs"
required-features = ["gtk4", "backend_cairo"]

[[example]]
name = "egui_vello"
path = "examples/egui_vello/main.rs"
required-features = ["ui_eframe", "backend_vello"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[dependencies]
gosub_net = { path = "../gosub_net" }
gosub_storage = { package = "gosub-storage", path = "../gosub_storage" }
gosub_html5 = { path = "../gosub_html5" }
gosub_css3 = { path = "../gosub_css3" }
gosub_interface = { path = "../gosub_interface" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.22", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls", "stream"] }
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
    "io-util",
] }
thiserror = "1.0.69"
rand = "0.9.2"
futures = { version = "0.3", features = ["executor"] }
anyhow = "1.0.98"
http = "1.3.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
log = "0.4.27"
lazy_static = "1.5.0"
pollster = { version = "0.4.0" }
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.1"

gtk4 = { version = "0.8", optional = true }
cairo-rs = { version = "0.21.1", optional = true }

skia-safe = { version = "0.87.0", optional = true }

vello = { version = "0.5.0", optional = true }
wgpu = { version = "24.0.5", optional = true }

winit = { version = "0.30.12", optional = true }


gdk4-wayland = { version = "0.8", optional = true, features = [
    "wayland_crate",
] }
gdk4-x11 = { version = "0.8", optional = true }
raw-window-handle = "0.6"
gdk4 = "0.8.2"

eframe = { version = "0.31.0", optional = true, features = ["wgpu"] }
egui = { version = "0.31.0", optional = true }
png = "0.17.16"
futures-intrusive = "0.5.0"
parley = "0.5.0"
fontique = "0.5.0"
hashbrown = "0.15.5"
skrifa = "0.31.3"
num_cpus = "1.17.0"
time = "0.3.41"
tokio-util = {  version = "0.7.16", features=["io"] }
tempfile = "3.21.0"
console-subscriber = "0.4.1"
tui-input = "0.14.0"
bitflags = "1.3.2"
futures-util = "0.3.31"
bytes = "1.10.1"
dashmap = "7.0.0-rc2"
tracing = "0.1.41"
once_cell = "1.21.3"
parking_lot = "0.12.4"
indicatif = "0.18.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-core = "0.3.31"
mime = "0.3.17"
chrono = "0.4.42"
regex = "1.11.1"
mimetype-detector = "0.2.2"
image = "0.25.8"
async-trait = "0.1.89"
async-channel = "2.5.0"
gosub_pipeline = { path = "../gosub_pipeline", optional = true }

[features]
default = ["sqlite_cookie_store", "parley_layout", "pipeline"]
ui_eframe = ["dep:eframe", "dep:egui"]
winit = ["dep:winit", "dep:wgpu"]
gtk4 = ["dep:gtk4", "dep:cairo-rs"]
sqlite_cookie_store = ["gosub_storage/sqlite_cookie_store"]
backend_cairo = ["dep:gtk4", "dep:cairo-rs"]
backend_vello = ["dep:vello", "dep:wgpu"]
backend_skia = ["dep:skia-safe"]
parley_layout = []
pipeline = ["dep:gosub_pipeline"]

wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]
