[package]
name = "gosub_html5"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "HTML5 parser for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
gosub_css3 = { version = "0.1.1", registry = "gosub", path = "../gosub_css3", features = [] }
phf = { version = "0.13.1", features = ["macros"] }
lazy_static = "1.5"
thiserror = "2.0.18"
url = { version = "2.5.8", features = [] }
log = { version = "0.4.29", features = [] }
nom = "8.0.0"
nom_locate = "5.0.0"
regex = "1"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
cow-utils = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.3.0"

[dev-dependencies]
test-case = "3.3.1"
criterion = { version = "0.8.2", features = ["html_reports"] }


[features]
debug_parser = []
debug_parser_verbose = []


[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "tree_construction"
harness = false
