[package]
name = "gosub_html5"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "HTML5 parser for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
gosub_css3 = { version = "0.1.1", registry = "gosub", path = "../gosub_css3", features = [] }
parking_lot = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }
lazy_static = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = [] }
log = { workspace = true, features = [] }
nom = { workspace = true }
nom_locate = "5.0.0"
regex = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
cow-utils = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gosub_net = { version = "0.1.1", registry = "gosub", path = "../gosub_net" }

[dev-dependencies]
test-case = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }


[features]
debug_parser = []
debug_parser_verbose = []


[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "tree_construction"
harness = false
