[package]
name = "gosub_instance"
version = "0.1.0"
edition = "2021"

[dependencies]
gosub_shared = { path = "../gosub_shared", registry = "gosub" }
gosub_interface = { path = "../gosub_interface", registry = "gosub" }
gosub_web_platform = { path = "../gosub_web_platform", registry = "gosub" }
gosub_net = { path = "../gosub_net" }
tokio = { version = "1.52.3", features = ["sync", "rt"] }
url = "2.5.8"
log = "0.4.29"

[lints]
workspace = true