[package]
name = "gosub_interface"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub engine interface"
license = "MIT"

[dependencies]
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
gosub_net = { version = "0.1.1", path = "../gosub_net", registry = "gosub" }
parking_lot = { workspace = true }
url = { workspace = true }

[lints]
workspace = true