[package]
name = "gosub_jsapi"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Web Javascript API"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
uuid = { version = "1.14.0", features = ["v4"] }
regex = "1"
cow-utils = "0.1.3"
