[package]
name = "gosub_jsapi"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Web Javascript API"

[dependencies]
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
uuid = { version = "1.16.0", features = ["v4"] }
regex = "1"
cow-utils = "0.1.3"
