[package]
name = "gosub_jsapi"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Web Javascript API"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
cow-utils = { workspace = true }
