[package]
name = "gosub_lattice"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "CSS table layout engine for Gosub"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared" }
anyhow = "1.0"
log = "0.4"

[lints]
workspace = true
