[package]
name = "gosub_net"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Network utitilies"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
anyhow = { workspace = true }
url = { workspace = true }
cow-utils = { workspace = true }
cookie = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
bytes = { workspace = true }
http = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
cow-utils = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "io-util", "sync", "time", "macros", "net"] }
tokio-util = { workspace = true, features = ["io"] }
tokio-stream = { workspace = true, features = ["sync"] }
reqwest = { workspace = true, default-features = true, features = ["rustls", "stream", "blocking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true }

[lints]
workspace = true