[package]
name = "gosub_pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipeline-cairo"
path = "src/bin/pipeline-cairo.rs"
required-features = ["text_pango", "backend_cairo"]

[[bin]]
name = "pipeline-vello"
path = "src/bin/pipeline-vello.rs"
required-features = ["backend_vello"]


[dependencies]
taffy = "0.7.5"
log = "0.4.29"
colog = "1.3.0"
image = "0.25.10"
rand = "0.9.0"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
csscolorparser = "0.7.0"
regex = "1.11.1"
rstar = "0.12.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
resvg = "0.47.0"
bytes = "1.10.1"
file_type = { version = "0.8.1", features = ["httpd"] }

anyhow = "1.0.102"
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface", registry = "gosub" }

parley = { version = "0.3.0", optional = true }
pangocairo = { version = "0.22", optional = true }
gtk4 = { version = "0.11.1", optional = true }
vello = { version = "0.4.1", optional = true }
winit = { version = "0.30.12", optional = true }
pollster = { version = "0.4.0", optional = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("text_skia"))'] }

[features]
default = []
text_pango = ["dep:pangocairo", "dep:gtk4"]
text_parley = ["dep:parley"]
backend_cairo = ["dep:gtk4"]
backend_vello = ["dep:vello", "dep:winit", "dep:pollster"]
