[package]
name = "gosub_pipeline"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
taffy = { version = "0.9", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "content_size", "calc"] }
log = "0.4.29"
colog = "1.3.0"
image = "0.25.10"
rand = "0.10.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
csscolorparser = "0.7.0"
regex = "1.11.1"
rstar = "0.12.2"
gosub_net = { version = "0.1.1", path = "../gosub_net", registry = "gosub" }
url = "2.5.8"
resvg = "0.47.0"
bytes = "1.10.1"
file_type = { version = "0.8.1", features = ["httpd"] }

anyhow = "1.0.102"
cow-utils = "0.1"
parking_lot = "0.12"
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface", registry = "gosub" }

[dev-dependencies]
gosub_html5 = { path = "../gosub_html5", registry = "gosub" }
gosub_css3 = { path = "../gosub_css3", registry = "gosub" }
url = "2"

