[package]
name = "gosub_render_backend"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"

[dependencies]
gosub_shared = { path = "../gosub_shared" }
gosub_html5 = { path = "../gosub_html5" }
gosub_css3 = { path = "../gosub_css3" }
gosub_typeface = { path = "../gosub_typeface" }
smallvec = "1.13.2"
image = "0.25.4"
raw-window-handle = "0.6.2"
log = "0.4.14"
anyhow = "1.0.92"
url = "2.5.2"

