[package]
name = "gosub_render_pipeline"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
taffy = { version = "0.10", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "content_size", "calc"] }
log = "0.4.29"
image = { version = "0.25.10", features = ["png"] }
rand = "0.10.1"
sha2 = "0.10.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.150"
csscolorparser = "0.7.0"
regex = "1.11.1"
rstar = "0.12.2"
gosub_net = { version = "0.1.1", path = "../gosub_net", registry = "gosub" }
url = "2.5.8"
resvg = "0.47.0"
bytes = "1.10.1"
file_type = { version = "0.8.1", features = ["httpd"] }
anyhow = "1.0.102"
cow-utils = "0.1"
parking_lot = "0.12"
parley = "0.9.0"
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface", registry = "gosub" }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }

# backend_cairo optional deps
cairo-rs = { version = "0.22", optional = true }
pangocairo = { version = "0.22", optional = true }

# backend_vello optional deps
vello = { version = "0.8.0", optional = true }
wgpu = { version = "29.0.0", optional = true }
fontique = { version = "0.9.0", optional = true }
hashbrown = { version = "0.17.1", optional = true }
skrifa = { version = "0.42.1", optional = true }

# backend_skia / backend_skia_gl optional deps
skia-safe = { version = "0.87.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-wayland = { version = "0.11", optional = true, features = ["wayland_crate"] }
gdk4-x11 = { version = "0.11", optional = true }

[[example]]
name = "screenshot_url"
required-features = ["backend_cairo"]

[dev-dependencies]
gosub_html5 = { path = "../gosub_html5", registry = "gosub" }
gosub_css3 = { path = "../gosub_css3", registry = "gosub" }
url = "2"

[features]
backend_cairo = ["dep:cairo-rs", "dep:pangocairo"]
backend_vello = ["dep:vello", "dep:wgpu", "dep:fontique", "dep:hashbrown", "dep:skrifa"]
backend_skia = ["dep:skia-safe"]
backend_skia_gl    = ["backend_skia", "skia-safe/gl"]
backend_skia_egl   = ["backend_skia_gl", "skia-safe/egl"]
backend_skia_metal = ["backend_skia", "skia-safe/metal"]
parley_layout = []
wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]
