[package]
name = "gosub_render_pipeline"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[dependencies]
taffy = { workspace = true, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "content_size", "calc"] }
log = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "gif"] }
rand = { workspace = true }
sha2 = "0.10.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csscolorparser = "0.8.3"
regex = { workspace = true }
rstar = "0.12.2"
gosub_net = { version = "0.1.1", path = "../gosub_net", registry = "gosub" }
url = { workspace = true }
resvg = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
cow-utils = { workspace = true }
parking_lot = { workspace = true }
parley = { workspace = true, default-features = true }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
gosub_interface = { version = "0.1.2", path = "../gosub_interface", registry = "gosub" }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }
gosub_lattice = { version = "0.1.0", path = "../gosub_lattice", registry = "gosub" }

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-wayland = { workspace = true, features = ["wayland_crate"], optional = true }
gdk4-x11 = { workspace = true, optional = true }

[dev-dependencies]
gosub_html5 = { path = "../gosub_html5", registry = "gosub" }
gosub_css3 = { path = "../gosub_css3", registry = "gosub" }
url = { workspace = true }

[features]
parley_layout = []
wayland = ["gdk4-wayland"]
x11 = ["gdk4-x11"]

# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# ExternalHandle carries raw GPU/surface handles and needs unsafe Send/Sync impls,
# which are allowed per-site with a justification.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
