[package]
name = "gosub_rendering"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"

[dependencies]
gosub_html5 = { path = "../gosub_html5" }
gosub_css3 = { path = "../gosub_css3" }
gosub_shared = { path = "../gosub_shared" }
gosub_render_backend = { path = "../gosub_render_backend" }
anyhow = "1.0.93"
regex = "1.11.1"
rstar = "0.12.2"
log = "0.4.14"
