[package]
name = "gosub_rendering"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"

[dependencies]
gosub_html5 = { path = "../gosub_html5" }
gosub_interface = { path = "../gosub_interface" }
gosub_shared = { path = "../gosub_shared" }
anyhow = "1.0.94"
rstar = "0.12.2"
log = "0.4.14"
