[package]
name = "gosub_renderer"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Gosub Renderer"

[dependencies]
gosub_rendering = { version = "0.1.1", registry = "gosub", path = "../gosub_rendering" }
gosub_interface = { version = "0.1.1", registry = "gosub", path = "../gosub_interface", features = [] }
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared" }
gosub_net = { version = "0.1.1", registry = "gosub", path = "../gosub_net" }
gosub_fontmanager = { version = "0.1.0", registry = "gosub", path = "../gosub_fontmanager" }
anyhow = "1.0.102"
image = "0.25.10"
url = "2.5.8"
log = "0.4.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.91"
wasm-bindgen-futures = "0.4.64"
