[package]
name = "gosub_renderer_cairo"
version = "0.1.0"
edition = "2021"
description = "Cairo rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_interface = { version = "0.1.1", path = "../gosub_interface", registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
resvg = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
cow-utils = { workspace = true }
parking_lot = { workspace = true }

cairo-rs = { workspace = true }
gtk4 = { workspace = true, optional = true }
pangocairo = { workspace = true, optional = true }

[features]
default = ["text_pango"]
text_pango = ["dep:pangocairo", "dep:gtk4"]
text_parley = []
text_skia = []

# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# the CairoBackend blits tile pixels through cairo's create_for_data_unsafe FFI,
# which is allowed per-site with a SAFETY justification.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
