[package]
name = "gosub_renderer_cairo"
version = "0.1.0"
edition = "2021"
description = "Cairo rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_interface = { version = "0.1.1", path = "../gosub_interface", registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
resvg = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
cow-utils = { workspace = true }
parking_lot = { workspace = true }

cairo-rs = { workspace = true }
gtk4 = { workspace = true, optional = true }
pangocairo = { workspace = true, optional = true }
# `@font-face` web-font registration: add fetched fonts to fontconfig at runtime so Pango
# discovers them. Works with the system Pango (no 1.56 dependency).
fontconfig-sys = { package = "yeslogic-fontconfig-sys", version = "6", optional = true }
# Same version cairo-rs's `freetype` feature binds against — the `freetype::face::Face` type is
# shared across the two crates in `FontFace::create_from_ft`.
freetype-rs = { version = "0.38", optional = true }

[features]
# text_glyphs paints; text_pango stays in the defaults because it provides PangoFontSystem
# (the font system cairo configs measure/shape with) and fontconfig web-font registration.
default = ["text_glyphs", "text_pango"]
text_pango = ["dep:pangocairo", "dep:gtk4", "dep:fontconfig-sys"]
text_parley = []
text_skia = []
# Engine-neutral glyph-run text painter: shapes through the configured FontSystem (any engine)
# and paints via FreeType + cairo_show_glyphs. Takes precedence over the text_* variants.
text_glyphs = ["cairo-rs/freetype", "dep:freetype-rs"]

# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# the CairoBackend blits tile pixels through cairo's create_for_data_unsafe FFI,
# which is allowed per-site with a SAFETY justification.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
