[package]
name = "gosub_renderer_cairo"
version = "0.1.0"
edition = "2021"
description = "Cairo rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_interface = { version = "0.1.1", path = "../gosub_interface", registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
resvg = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
cow-utils = { workspace = true }
parking_lot = { workspace = true }

cairo-rs = { workspace = true, features = ["freetype"] }
gtk4 = { workspace = true, optional = true }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub", optional = true }
# Same version cairo-rs's `freetype` feature binds against — the `freetype::face::Face` type is
# shared across the two crates in `FontFace::create_from_ft`.
freetype-rs = { version = "0.38" }

[features]
# `pango` provides PangoFontSystem (via gosub_fontmanager) — the font system cairo configs
# measure/shape with — plus GTK init and the gdk-pixbuf image-brush path.
default = ["pango"]
pango = ["dep:gtk4", "dep:gosub_fontmanager", "gosub_fontmanager/pango"]

# Mirrors the workspace lints, except unsafe_code is "deny" instead of "forbid":
# the CairoBackend blits tile pixels through cairo's create_for_data_unsafe FFI,
# which is allowed per-site with a SAFETY justification.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
