[package]
name = "gosub_renderer_skia"
version = "0.1.0"
edition = "2021"
description = "Skia rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
log = "0.4.29"
anyhow = "1.0"
parking_lot = "0.12"

skia-safe = { version = "0.97.2", features = ["textlayout"] }

[lints]
workspace = true
