[package]
name = "gosub_renderer_skia"
version = "0.1.0"
edition = "2021"
description = "Skia rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_interface = { version = "0.1.1", path = "../gosub_interface", registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
resvg = { workspace = true }

skia-safe = { workspace = true, features = ["textlayout"] }

[features]
default = ["text_glyphs"]
# Draw text through Skia's own textlayout engine (the previous native path).
text_skia = []
# Engine-neutral glyph-run text painter: shapes through the configured FontSystem (any engine)
# and paints the returned glyph runs. Takes precedence over text_skia when enabled.
text_glyphs = []

[lints]
workspace = true
