[package]
name = "gosub_renderer_vello"
version = "0.1.0"
edition = "2021"
description = "Vello rasterizer and compositor backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline", features = ["backend_vello"] }
gosub_fontmanager = { version = "0.1.0", path = "../gosub_fontmanager", registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "../gosub_shared", registry = "gosub" }
resvg = "0.47.0"
log = "0.4.29"
anyhow = "1.0"
parking_lot = "0.12"

vello = "0.8.0"
pollster = "0.4.0"
winit = "0.30.12"

parley = { version = "0.9.0", optional = true, default-features = false, features = ["std"] }
skia-safe = { version = "0.87.0", features = ["textlayout"], optional = true }

[features]
default = ["text_parley"]
text_parley = ["dep:parley"]
text_skia = ["dep:skia-safe"]
text_pango = []

[lints]
workspace = true
